apps/40-network/netbird/base/middleware-cors.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: netbird-cors
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - OPTIONS
      - POST
      - PUT
      - DELETE
      - PATCH
    accessControlAllowHeaders:
      - "*"
    accessControlAllowOriginList:
      - "https://netbird.dev.truxonline.com"
      - "https://netbird.truxonline.com"
    accessControlMaxAge: 100
    accessControlAllowCredentials: true
