apps/40-network/netbird/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: networking
  labels:
    name: networking
    monitoring: enabled
