apps/40-network/netbird/base/deployment-dashboard.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-dashboard
  labels:
    app.kubernetes.io/name: netbird-dashboard
    app.kubernetes.io/instance: netbird
    app.kubernetes.io/part-of: network-stack
    app.kubernetes.io/managed-by: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: netbird-dashboard
      app.kubernetes.io/instance: netbird
  template:
    metadata:
      labels:
        app.kubernetes.io/name: netbird-dashboard
        app.kubernetes.io/instance: netbird
    spec:
      serviceAccountName: netbird-dashboard
      priorityClassName: vixens-medium
      containers:
        - name: dashboard
          image: netbirdio/dashboard:v2.26.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 100m
              memory: 256Mi
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
