apps/40-network/netbird/base/deployment-management.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-management
  labels:
    app.kubernetes.io/name: netbird-management
    app.kubernetes.io/instance: netbird
    app.kubernetes.io/part-of: network-stack
    app.kubernetes.io/managed-by: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: netbird-management
      app.kubernetes.io/instance: netbird
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: netbird-management
        app.kubernetes.io/instance: netbird
    spec:
      serviceAccountName: netbird-management
      priorityClassName: vixens-medium
      containers:
        - name: management
          image: netbirdio/management:0.62.2
          imagePullPolicy: IfNotPresent
          args:
            - --port=80
            - --log-file=console
            - --log-level=info
            - --disable-anonymous-metrics=false
            - --single-account-mode-domain=netbird.selfhosted
            - --dns-domain=netbird.selfhosted
            - --config=/etc/netbird/management.json
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 33073
              name: grpc
              protocol: TCP
            - containerPort: 9090
              name: metrics
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 10
            tcpSocket:
              port: http
            timeoutSeconds: 3
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 10
            tcpSocket:
              port: http
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 200m
              memory: 512Mi
          volumeMounts:
            - mountPath: /etc/netbird
              name: config-writable
            - mountPath: /var/lib/netbird
              name: netbird-data
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      volumes:
        - name: config-writable
          emptyDir: {}
        - name: netbird-data
          persistentVolumeClaim:
            claimName: netbird-data
