apps/40-network/netbird/base/deployment-relay.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-relay
  labels:
    app.kubernetes.io/name: netbird-relay
    app.kubernetes.io/instance: netbird
    app.kubernetes.io/part-of: network-stack
    app.kubernetes.io/managed-by: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: netbird-relay
      app.kubernetes.io/instance: netbird
  template:
    metadata:
      labels:
        app.kubernetes.io/name: netbird-relay
        app.kubernetes.io/instance: netbird
    spec:
      serviceAccountName: netbird-relay
      priorityClassName: vixens-medium
      containers:
        - name: relay
          image: netbirdio/relay:0.62.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 33080
              name: http
              protocol: TCP
            - containerPort: 9090
              name: metrics
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            tcpSocket:
              port: http
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            tcpSocket:
              port: http
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 100m
              memory: 256Mi
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
