apps/40-network/netbird/base/deployment-signal.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-signal
  labels:
    app.kubernetes.io/name: netbird-signal
    app.kubernetes.io/instance: netbird
    app.kubernetes.io/part-of: network-stack
    app.kubernetes.io/managed-by: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: netbird-signal
      app.kubernetes.io/instance: netbird
  template:
    metadata:
      labels:
        app.kubernetes.io/name: netbird-signal
        app.kubernetes.io/instance: netbird
    spec:
      serviceAccountName: netbird-signal
      priorityClassName: vixens-medium
      containers:
        - name: signal
          image: netbirdio/signal:0.62.2
          imagePullPolicy: IfNotPresent
          args:
            - --port
            - "80"
            - --log-level
            - info
            - --log-file
            - console
          ports:
            - containerPort: 80
              name: grpc
              protocol: TCP
            - containerPort: 9090
              name: metrics
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            tcpSocket:
              port: grpc
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            tcpSocket:
              port: grpc
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 100m
              memory: 256Mi
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
