apps/40-network/netbird/base/force-postgres-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-management
spec:
  template:
    spec:
      containers:
        - name: management
