apps/40-network/netbird/base/tolerations-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-management
spec:
  template:
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-dashboard
spec:
  template:
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-signal
spec:
  template:
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-relay
spec:
  template:
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
