apps/40-network/netbird/base/dashboard.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-dashboard
  annotations:
    vpa.kubernetes.io/updateMode: "Off"
    goldilocks.fairwinds.com/enabled: "true"
  labels:
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: netbird-dashboard
  template:
    metadata:
      labels:
        app: netbird-dashboard
        vixens.io/sizing.dashboard: V-micro
        vixens.io/backup-profile: "relaxed"
      annotations:
        vixens.io/fast-start: "true"
        vixens.io/explicitly-allow-root: "true"
        vixens.io/no-long-connections: "true"
    spec:
      priorityClassName: vixens-low
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: dashboard
          image: netbirdio/dashboard:v2.93.0
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add: ["CHOWN", "SETUID", "SETGID"]
              drop: ["ALL"]
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: nginx-tmp
              mountPath: /var/lib/nginx
            - name: nginx-run
              mountPath: /run/nginx
            - name: nginx-config
              mountPath: /etc/nginx/http.d/default.conf
              subPath: default.conf
      volumes:
        - name: nginx-tmp
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
        - name: nginx-config
          configMap:
            name: netbird-dashboard-nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: netbird-dashboard
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: netbird-dashboard
