apps/40-network/netbird/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: netbird-management
  labels:
    app.kubernetes.io/name: netbird-management
    app.kubernetes.io/instance: netbird
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: grpc
      port: 33073
      targetPort: grpc
  selector:
    app.kubernetes.io/name: netbird-management
    app.kubernetes.io/instance: netbird
---
apiVersion: v1
kind: Service
metadata:
  name: netbird-signal
  labels:
    app.kubernetes.io/name: netbird-signal
    app.kubernetes.io/instance: netbird
spec:
  ports:
    - name: grpc
      port: 80
      targetPort: grpc
  selector:
    app.kubernetes.io/name: netbird-signal
    app.kubernetes.io/instance: netbird
---
apiVersion: v1
kind: Service
metadata:
  name: netbird-relay
  labels:
    app.kubernetes.io/name: netbird-relay
    app.kubernetes.io/instance: netbird
spec:
  ports:
    - name: http
      port: 33080
      targetPort: http
  selector:
    app.kubernetes.io/name: netbird-relay
    app.kubernetes.io/instance: netbird
---
apiVersion: v1
kind: Service
metadata:
  name: netbird-dashboard
  labels:
    app.kubernetes.io/name: netbird-dashboard
    app.kubernetes.io/instance: netbird
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: netbird-dashboard
    app.kubernetes.io/instance: netbird
